# Elecard_test_task

./: .gitignore  CMakeLists.txt  converter.cpp  converter.h  dataContainers.h  imageBmp.cpp  imageBmp.h  main.cpp  overlayProcessor.cpp  overlayProcessor.h  validator.cpp  validator.h  videoYuv420Reader.cpp  videoYuv420Reader.h  videoYuv420Writer.cpp  videoYuv420Writer.h
